--- a/src/config/index.styl
+++ b/src/config/index.styl
@@ -1,11 +1,21 @@
-.navbar {
+.navbar 
     height 3.5rem
-}
 
-.sidebar {
+.sidebar 
     width 20rem
-}
 
-.content.default {
-    max-width 70%
-}
+.content.default 
+    max-width 80%
+
+.myjumbotron 
+    overflow-wrap: break-word
+    word-wrap: break-word
+    hyphens: auto
+    display: inline-block
+
+:focus 
+    outline-width: 3px
+    outline-style: solid
+    outline-color: #0ea1d2
+// :focus-within
+//     outline-color: orange
