changed styling of ModelTile buttons to variant 'primary' overrided colours of button and badge primary variants to asterics blue forced jumbotron width to 100%
Unfortunately hover colours still don't work and the page is not fully responsive any more. --> when pressing ctrl-shift-M the left and right margin is too big

--> probably we should recompile the SASS variables to fully control the behaviours

--- a/src/config/index.styl
+++ b/src/config/index.styl
@@ -5,17 +5,44 @@
     width 20rem
 
 .content.default 
-    max-width 80%
+    max-width 70%
 
 .myjumbotron 
     overflow-wrap: break-word
     word-wrap: break-word
     hyphens: auto
     display: inline-block
+    width: 100%
+
+.badge
+    background-color: #0ea1d2
+    border-color: #0ea1d2
+
+.badge-primary
+    background-color: #0ea1d2
+    border-color: #0ea1d2    
+
+.button
+    outline-color: #0ea1d2
+    color: #0ea1d2
+
+.btn
+    background-color: #0ea1d2
+    border-color: #0ea1d2
+
+.btn-primary
+    background-color: #0ea1d2
+    border-color: #0ea1d2
+
+.btn-secondary
+    background-color: #0ea1d2
+    border-color: #0ea1d2
+
+.btn-success
+    background-color: #0ea1d2
+    border-color: #0ea1d2    
 
 :focus 
     outline-width: 3px
     outline-style: solid
     outline-color: #0ea1d2
-// :focus-within
-//     outline-color: orange
