reduced nav-link padding to :0

--- a/src/config/index.styl
+++ b/src/config/index.styl
@@ -42,6 +42,9 @@
     background-color: #0ea1d2
     border-color: #0ea1d2    
 
+.nav-link
+    padding: 0
+
 :focus 
     outline-width: 3px
     outline-style: solid
