--- a/src/config/palette.styl
+++ b/src/config/palette.styl
@@ -1,4 +1,22 @@
+// colors
 $accentColor = #0ea1d2
 $textColor = #000000
 $borderColor = #eaecef
 $codeBgColor = #282c34
+$arrowBgColor = #ccc
+
+// layout
+$navbarHeight = 3.6rem
+$sidebarWidth = 20rem
+// $contentWidth = 740px
+$contentWidth = 70%
+// $contentWidth = 1040px
+
+// responsive breakpoints
+$MQNarrow = 1250px
+$MQMobile = 1020px
+$MQMobileNarrow = 419px
+
+// code
+$lineNumbersWrapperWidth = 3.5rem
+$codeLang = js ts html md vue css sass scss less stylus go java c sh yaml py docker dockerfile makefile
