Add tag icons, adapt contentWidth

--- a/src/config/index.styl
+++ b/src/config/index.styl
@@ -4,6 +4,11 @@
 .sidebar 
     width 20rem
 
+@media screen and (max-width: 1024px)
+    .content 
+        max-width 80% !important
+        transition max-width 0.5s ease-out
+
 @media screen and (max-width: 768px)
     .content 
         max-width 99% !important
