--- a/src/config/palette.styl
+++ b/src/config/palette.styl
@@ -9,7 +9,8 @@ $arrowBgColor = #ccc
 $navbarHeight = 3.6rem
 $sidebarWidth = 20rem
 // $contentWidth = 740px
-$contentWidth = 70%
+// $contentWidth = 70%
+$contentWidth = 900px
 // $contentWidth = 1040px
 
 // responsive breakpoints
