Move public to src/vuepress, add animate.css, tests different pictures for solutions/README.md

--- a/src/vuepress/styles/main.scss
+++ b/src/vuepress/styles/main.scss
@@ -20,3 +20,6 @@ $info: #0ea1d2;
 // Include Bootstrap and BootstrapVue SCSS files
 @import "~bootstrap/scss/bootstrap.scss";
 @import "~bootstrap-vue/src/index.scss";
+
+// Include animate.css
+@import "~animate.css/animate.min.css";
