--- a/src/vuepress/styles/palette.styl
+++ b/src/vuepress/styles/palette.styl
@@ -10,13 +10,17 @@ $navbarHeight = 3.6rem
 $sidebarWidth = 20rem
 // $contentWidth = 740px
 // $contentWidth = 70%
-$contentWidth = 900px
+$contentWidth = 1400px
 // $contentWidth = 1040px
 
 // responsive breakpoints
-$MQNarrow = 1250px
-$MQMobile = 1020px
-$MQMobileNarrow = 419px
+// $MQNarrow = 1250px
+// $MQMobile = 1020px
+// $MQMobileNarrow = 419px
+
+$MQNarrow = 999px
+$MQMobile = 789px
+$MQMobileNarrow = 456px
 
 // code
 $lineNumbersWrapperWidth = 3.5rem
