Update @asterics/vuepress-theme-docs, add Jumbo.vue, FrontLayout.vue

--- a/src/vuepress/styles/main.scss
+++ b/src/vuepress/styles/main.scss
@@ -23,3 +23,21 @@ $info: #0ea1d2;
 
 // Include animate.css
 @import "~animate.css/animate.min.css";
+
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import url("https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe");
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url("https://fonts.googleapis.com/css?family=Pacifico");
+@import url("https://fonts.googleapis.com/css?family=Quicksand");
+@import url("https://fonts.googleapis.com/css?family=Indie+Flower");
+@import url("https://fonts.googleapis.com/css?family=Creepster");
+@import url("https://fonts.googleapis.com/css?family=Ewert");
+@import url("https://fonts.googleapis.com/css?family=Mogra");
+@import url("https://fonts.googleapis.com/css?family=Gloria+Hallelujah");
+@import url("https://fonts.googleapis.com/css?family=Alfa+Slab+One");
+@import url("https://fonts.googleapis.com/css?family=Fredoka+One");
+@import url("https://fonts.googleapis.com/css?family=Viga");
+@import url("https://fonts.googleapis.com/css?family=Amaranth");
+@import url("https://fonts.googleapis.com/css?family=Carter+One");
+@import url("https://fonts.googleapis.com/css?family=Baloo");
+// @import url("https://fonts.googleapis.com/css?family=Roboto|ZCOOL+KuaiLe");
