--- a/src/vuepress/styles/index.styl
+++ b/src/vuepress/styles/index.styl
@@ -20,3 +20,7 @@
     outline-width: 3px
     outline-style: solid
     outline-color: $info
+
+#app > div.theme-container.no-sidebar > header > div.links > nav > div:nth-child(6) > div > ul > li {
+    background-color: white
+}
