--- a/src/vuepress/styles/palette.styl
+++ b/src/vuepress/styles/palette.styl
@@ -17,10 +17,24 @@ $contentWidth = 1400px
 // $MQNarrow = 1250px
 // $MQMobile = 1020px
 // $MQMobileNarrow = 419px
+// ===
+// $MQNarrow = 999px
+// $MQMobile = 789px
+// $MQMobileNarrow = 456px
 
-$MQNarrow = 999px
-$MQMobile = 789px
+// responsive breakpoints
+// NOTE:
+// Changes of these breakpoints should be
+// aligned with the breakpoints defined
+// in palette.styl.
+//
+// Because of differing syntax, there is
+// currently no clean and easy solution,
+// except for this comment.
+$MQNarrow = 1234px
+$MQMobile = 999px
 $MQMobileNarrow = 456px
+
 
 // code
 $lineNumbersWrapperWidth = 3.5rem
