Set outline color to important, remove wrong selector element, remove margin and padding of theme-default-content class

--- a/src/vuepress/styles/index.styl
+++ b/src/vuepress/styles/index.styl
@@ -14,13 +14,13 @@
         max-width 99% !important
 
 .nav-link
-    padding: 0
+    padding: 0.5rem 0.15rem 0.5rem 0.15rem
 
 :focus 
     outline-width: 3px
     outline-style: solid
-    outline-color: $info
+    outline-color: #0ea1d2 !important
 
-#app > div.theme-container.no-sidebar > header > div.links > nav > div:nth-child(6) > div > ul > li {
-    background-color: white
-}
+.theme-default-content > h1
+    margin-top: 0rem !important
+    padding-top: 0rem !important
